--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,14 +8,14 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || data.meta.default_title %> - <%= data.meta.title_description %></title>
 
-    <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <%= stylesheet_link_tag :site %>
-    <%= javascript_include_tag :all %>
   </head>
 
   <body class="<%= page_classes %>">
     <%= yield %>
     <%= partial 'footer' %>
+    <%= javascript_include_tag :all %>
   </body>
 </html>
