Updated member profile info

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -75,7 +75,8 @@ title: Akron Kitchen
     <div class="col-md-8 col-md-offset-2">
       <h2 class="title">Who We Are</h2>
       <p class="description">We're made up of Akron's finest food entrepreneurs,
-        caterers, restaurant owners, local growers, and area food organizations.</p>
+        caterers, restaurant owners, local growers, and area food organizations.
+        Here are just a few of the people making things happen.</p>
     </div>
   </div>
 
