Add some meta tags to the index page.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,9 @@
 
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || data.meta.default_title %> - <%= data.meta.title_description %></title>
+    <meta name="description" content="We’re a diverse group of locally-owned food businesses looking to bring a commercial kitchen to the Akron, Ohio area.">
+    <meta name="keywords" content="akron, akron kitchen, akron kitchen project, commercial kitchen, summit county kitchen, akron food">
+    <meta name="author" content="Akron Kitchen Project">
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
